--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="images/eko.jpg" width="100" alt=""></td>
+            <td><img src="images/eko.JPG" width="100" alt=""></td>
             <td>  <h1>Eko Widjianto</h1>
                 <em><p>Analis Keimigrasian Ahli Pertama</p></em></td>
         </tr>
